# 4x-term

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
archive/: README.md
content/: economy.ron  economy_config.ron  encyclopedia.ron  goods.ron  recipes.ron  systems.ron  traders.ron
content/profiles/: starter.ron
crates/game-app/: Cargo.toml
crates/game-app/src/: lib.rs  tests.rs
crates/game-cli/: Cargo.toml
crates/game-cli/src/: main.rs
crates/game-cli/tests/: boundaries.rs
crates/game-content/: Cargo.toml
crates/game-content/src/: diagnostics.rs  energy_logistics.rs  fingerprint.rs  generator.rs  lib.rs  profile.rs  schema.rs
crates/game-content/tests/: generated_artifact_api.rs  generator_content.rs
crates/game-content/tests/fixtures/: invalid_stage4.ron  invalid_world.ron  stage4_origin.ron  three_locations.ron
crates/game-core/: Cargo.toml
crates/game-core/src/: ids.rs  knowledge.rs  lib.rs  population.rs  resources.rs  routing.rs  ships.rs  simulation.rs  stage5_boundary_tests.rs  tests.rs  world.rs
crates/game-core/src/energy_logistics/: mod.rs  tests.rs
crates/game-core/tests/: economy_loop_mock.rs  global_tick_integration.rs  pricing_model_mock.rs  routing_knowledge.rs  ships_expansion.rs
crates/game-play/: Cargo.toml
crates/game-tui/: Cargo.toml
crates/game-tui/src/: clock.rs  input.rs  lib.rs  playtest.rs  state.rs  state_tests.rs  terminal.rs
crates/game-tui/src/render/: components.rs  mod.rs
crates/game-tui/tests/: mode_state_acceptance.rs
docs/: 2026-07-20-authored-market-world-migration-audit.md  2026-07-20-design-direction-governance-sandbox.md  2026-07-20-engine-invariant-registry.md  2026-07-20-frontend-architecture-lessons.md  2026-07-20-testing-stance-correction.md  architecture.md  design-direction-governance-sandbox.md  energy-economy.md  energy-logistics-validation.md  ideas.md  initial-prototype.md  tui-ux-guidelines.md  world-dynamics-validation.md
docs/design/: README.md  energy-and-seasons.md  generator-identity.md  generator-revision-1.md  population-and-habitats.md  scouting-and-knowledge.md  ships-and-expansion.md  simulation-timing.md  systems-and-resources.md  tuning-profiles.md  world-generation.md
docs/evidence/: 2026-07-10-initial-prototype-validation.md
docs/plans/: 2026-07-10-feature-initial-prototype-implementation-plan.md  2026-07-12-feature-energy-denominated-economy-foundation-plan.md  2026-07-13-feature-mode-based-terminal-ui-ux-overhaul-plan.md  2026-07-13-feature-world-dynamics-population-player-progression-plan.md  2026-07-14-feature-advanced-goods-development-projects-plan.md  2026-07-14-feature-physical-energy-logistics-plan.md  2026-07-14-feature-system-service-fleets-plan.md  (+15 more)
notes/: 2026-07-14-playtest-notes.md
setup/: Brewfile  README.md  bootstrap-macos.sh  doctor.sh  pi-packages.txt
todos/: 001-complete-p2-preserve-atomic-economy-mutations.md  001-pending-p2-preserve-atomic-economy-mutations.md  001-ready-p1-enable-open-frontier-probe-discovery.md  001-ready-p2-preserve-atomic-economy-mutations.md  002-complete-p2-restore-terminal-when-setup-fails.md  002-pending-p2-package-standalone-github-releases.md  002-pending-p2-restore-terminal-when-setup-fails.md  002-ready-p2-restore-terminal-when-setup-fails.md  003-complete-p2-handle-ordered-event-backpressure.md  003-pending-p2-audit-plans-for-design-truth.md  003-pending-p2-handle-ordered-event-backpressure.md  003-ready-p2-handle-ordered-event-backpressure.md  004-complete-p1-design-trade-commitments-and-market-liquidity.md  004-pending-p1-design-trade-commitments-and-market-liquidity.md  005-complete-p1-design-cost-aware-price-formation.md  005-pending-p1-design-cost-aware-price-formation.md  006-complete-p1-slice-1-energy-denominated-economy-foundation.md  007-complete-p1-slice-2-world-dynamics-population-and-player-progression.md  007-pending-p1-slice-2-world-dynamics-population-and-player-progression.md
(+72 files in other folders)
