[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.7.1"
edition = "2024"
rust-version = "1.97"
license = "MIT"

[workspace.dependencies]
ron = "0.12.2"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.18"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
