[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.7.1"
edition = "2024"
rust-version = "1.97"
license = "MIT"

[workspace.dependencies]
ron = "0.12.2"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.18"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm_0_29"] }
crossterm = "0.29.0"
unicode-width = "0.2.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
