[package]
name = "game-content"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
test-support = ["game-core/test-support"]

[dependencies]
game-core = { path = "../game-core" }
ron.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[[test]]
name = "generator_content"
required-features = ["test-support"]

[lints]
workspace = true
